[package]
name = "quakeml"
version = "0.1.3"
authors = ["Marius Kriegerowski <marius.kriegerowski@gmail.com>"]
description = "Deserialization of QuakeML - a flexible, extensible and modular XML representation of seismological data."
repository = "https://github.com/HerrMuellerluedenscheid/quakeml"
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["seismology"]
exclude = ["/resources", ".*"]

[dependencies]
clap = "2.34"
structopt = "0.3.13"
serde = { version = "1.0", features = [ "derive" ], macros = ["Deserialize", "PartialEq"]}
quick-xml = { version = "0.21", features = [ "serialize" ] }
chrono = { version = "0.4", features = ["serde"] }
