[package]
name = "quakeml"
version = "0.1.5"
authors = ["Marius Kriegerowski <marius.kriegerowski@gmail.com>"]
description = "Deserialization of QuakeML - a flexible, extensible and modular XML representation of seismological data."
repository = "https://github.com/HerrMuellerluedenscheid/quakeml"
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["seismology"]
exclude = ["/resources", ".*"]

[lib]
name = "quakeml"
path = "src/quakeml.rs"

[[bin]]
name = "quakeml"
path = "src/main.rs"

[[bin]]
name = "usgs"
path = "src/usgs.rs"

[dependencies]
xmltree = "0.10.3"
tokio = { version = "1.14.0", features = ["full"]}
reqwest = "0.11.7"
clap = "2.34"
structopt = "0.3.13"
serde = { version = "1.0", features = [ "derive" ], macros = ["Deserialize", "PartialEq"]}
quick-xml = { version = "0.21", features = [ "serialize" ] }
chrono = { version = "0.4", features = ["serde"] }
